--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -207,6 +207,7 @@
     <Content Include="Images\butterfly-catching.jpg" />
     <Content Include="Images\dropdown.png" />
     <Content Include="Images\dropdown32.png" />
+    <Content Include="Images\tfs-defect-screen.PNG" />
     <Content Include="notes\catchme_create.sql" />
     <EntityDeploy Include="Models\CatchMe.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
