--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -19,6 +19,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="SendEmail" value="true" />
+    <add key="SendErrorEmail" value="true" />
+    <add key="SmtpHostIp" value="172.17.14.10" />
+    <add key="SmtpHostDns" value="mcbcas.mcb.local" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
