--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -259,8 +259,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\plugins\combodate.js" />
     <Content Include="Scripts\plugins\DataTables.js" />
     <Content Include="Scripts\plugins\list.js" />
+    <Content Include="Scripts\plugins\moment.js" />
     <Content Include="Scripts\plugins\nicEdit.js" />
     <Content Include="Scripts\plugins\nicEditorIcons.gif" />
     <Content Include="Scripts\plugins\readmore.js" />
