--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -333,6 +333,7 @@
     <Content Include="Views\Tasks\_notificationBody.cshtml" />
     <Content Include="Views\Stats\Index.cshtml" />
     <Content Include="Views\Tasks\EditComment.cshtml" />
+    <Content Include="Views\Tasks\_EditComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
