--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -332,8 +332,8 @@
     <Content Include="Views\Tasks\NoProject.cshtml" />
     <Content Include="Views\Tasks\_notificationBody.cshtml" />
     <Content Include="Views\Stats\Index.cshtml" />
-    <Content Include="Views\Tasks\EditComment.cshtml" />
     <Content Include="Views\Tasks\_EditComment.cshtml" />
+    <Content Include="Views\Admin\Home.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
