--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\logsController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -339,6 +340,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\logs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
