--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -24,17 +24,18 @@
     <add key="SendErrorEmail" value="true" />
     <add key="SmtpHostIp" value="172.17.14.10" />
     <add key="SmtpHostDns" value="mcbcas.mcb.local" />
-    <add key="ServerPathProd" value="http://dwh-appsdev/TestSite" />
-    <add key="ServerPath" value="/uploads/" />
+    <add key="ServerPath" value="http://dwh-appsdev/CatchMe" />
+    <add key="UploadPath" value="/uploads/" />
 
-    <add key="authorizedImagesExt" value="jpg;jpeg;png;pdf;xlsx;docx;pptx;txt;sql;zip" />
-    <add key="MaxUploadSize" value="4096" />
+    <add key="authorizedImagesExt" value="jpg;jpeg;png;pdf;xlsx;docx;pptx;txt;sql;zip;msg" />
+    <add key="MaxUploadSize" value="10240" />
 
     <add key="IsProd" value="true" />
 
 
   </appSettings>
   <system.web>
+     <sessionState timeout="20"></sessionState>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Windows" />
