--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -266,6 +266,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="notes\catchme_data.7z" />
     <Content Include="notes\New folder.zip" />
+    <Content Include="notes\cmdb.zip" />
     <None Include="Properties\PublishProfiles\dwh-appsdev %28Debug%29.pubxml" />
     <None Include="Properties\PublishProfiles\TestSite %28dwh-appsdev%29.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
