--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -35,6 +35,7 @@
 
   </appSettings>
   <system.web>
+    <globalization culture="en-GB"/>    <!-- used for date format dd/MM/yyyy-->
      <sessionState timeout="20"></sessionState>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
