--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -300,6 +300,7 @@
     <Content Include="Scripts\plugins\chosen.jquery.js" />
     <Content Include="Scripts\plugins\combodate.js" />
     <Content Include="Scripts\plugins\DataTables.js" />
+    <Content Include="Scripts\plugins\datatables.min.js" />
     <Content Include="Scripts\plugins\list.js" />
     <Content Include="Scripts\plugins\moment.js" />
     <Content Include="Scripts\plugins\nicEdit.js" />
