--- a/CatchMe/Web.config
+++ b/CatchMe/Web.config
@@ -24,7 +24,7 @@
     <add key="SendErrorEmail" value="true" />
     <add key="SmtpHostIp" value="172.17.14.10" />
     <add key="SmtpHostDns" value="mcbcas.mcb.local" />
-    <add key="ServerPath" value="http://dwh-appsdev/CatchMe" />
+    <add key="ServerPath" value="http://dwh-appsdev/" />
     <add key="UploadPath" value="/uploads/" />
 
     <add key="authorizedImagesExt" value="jpg;jpeg;png;pdf;xlsx;docx;pptx;txt;sql;zip;msg" />
@@ -99,12 +99,12 @@
     
 <connectionStrings>
  <!-- server -->
-  <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DWH-APPSDEV\DWHAPPSDEVSQL;initial catalog=CatchMeDB;integrated security=False;Uid=catchmeadmin;Pwd=catchmeadmin01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DWH-APPSDEV\DWHAPPSDEVSQL;initial catalog=CatchMeDB;integrated security=False;Uid=catchmeadmin;Pwd=catchmeadmin01;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 <!-- local -->
 <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   
   <!-- loocal sit-->
-  <add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDBSIT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <!--<add name="CatchMeDBEntities" connectionString="metadata=res://*/Models.CatchMe.csdl|res://*/Models.CatchMe.ssdl|res://*/Models.CatchMe.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=CatchMeDBSIT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 </connectionStrings>
 
 
