--- a/CatchMe/CatchMe.csproj
+++ b/CatchMe/CatchMe.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Models\Meta\attachmentMeta.cs" />
     <Compile Include="Models\Meta\commentMeta.cs" />
     <Compile Include="Models\Meta\logMeta.cs" />
+    <Compile Include="Models\Meta\notificationMeta.cs" />
     <Compile Include="Models\Meta\projectMeta.cs" />
     <Compile Include="Models\Meta\projectUserRoleMeta.cs" />
     <Compile Include="Models\Meta\taskHistMeta.cs" />
